testsuite/tests/parse-errors/singleton_labeled_tuple_type.compilers.reference
<<<<<<< HEAD
File "singleton_labeled_tuple_type.ml", line 8, characters 26-27:
8 | let foo (just_x : (x : int)) = just_x
||||||| 23e84b8c4d
=======
File "singleton_labeled_tuple_type.ml", line 7, characters 26-27:
7 | let foo (just_x : (x : int)) = just_x
>>>>>>> d505d53be15ca18a648496b70604a7b4db15db2a
                              ^
Error: Syntax error
